샘플 리스트 템플릿

--- a/src/components/ListTemplate/styles.css
+++ b/src/components/ListTemplate/styles.css
@@ -23,7 +23,8 @@
 
 .listSubTitleText{
     margin:3px;
-    font-weight: bold;
+    line-height: 4;
+    /*font-weight: bold;*/
 }
 
 .listSubTitleText.positive{
